# call_me_maybe

./: .gitignore  Makefile  README.md  pyproject.toml
data/input/: function_calling_tests.json
llm_sdk/: __init__.py
src/: __init__.py  __main__.py  model.py  models.py  prompt_builder.py
src/state_machine/: state.py
src/vocab/: load_vocab.py
