[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    "pydantic>=2.13.3",
    "mypy>=2.1.0",
]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "llm_sdk,llm_sdk.*"
ignore_errors = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

